Update styles, layout, and interactivity
- Enhanced CSS styling
- Updated index.html structure
- Improved JavaScript functionality

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Today Would Be Nice</title>
+  <link rel="stylesheet" href="https://unpkg.com/lenis@1.3.15/dist/lenis.css">
   <link rel="stylesheet" href="css/style.css">
+  <!-- Fathom - beautiful, simple website analytics -->
+  <script src="https://cdn.usefathom.com/script.js" data-site="QFPHRVVU" defer></script>
+  <!-- / Fathom -->
 </head>
 <body>
   <!-- Header -->
   <header class="header">
     <div class="header__logo">Today Would Be Nice</div>
     <nav class="header__nav">
-      <a href="#" class="nav__link" data-section="work">Work</a>
       <a href="#" class="nav__link" data-section="about">About</a>
       <a href="https://cal.com/schdhri/30min" class="nav__link" target="_blank" rel="noopener noreferrer">Contact</a>
     </nav>
@@ -80,6 +83,7 @@
     </div>
   </div>
 
+  <script src="https://unpkg.com/lenis@1.3.15/dist/lenis.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
